--- a/Modulo_1/4_Funciones_numeros_complejos.ipynb
+++ b/Modulo_1/4_Funciones_numeros_complejos.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "1853396287856"
+       "2456398004592"
       ]
      },
      "execution_count": 4,
@@ -210,7 +210,7 @@
     {
      "data": {
       "text/plain": [
-       "1853396287856"
+       "2456398004592"
       ]
      },
      "execution_count": 5,
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -296,11 +296,135 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Operaciones matematicas con funciones especiales "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Esto importa una libreria \n",
+    "import math\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.8284271247461903\n",
+      "2187.0\n",
+      "2.302585092994046\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calcular la raiz cuadrada de un numero \n",
+    "\n",
+    "raiz_cuadrada = math.sqrt(8)\n",
+    "print(raiz_cuadrada)\n",
+    "\n",
+    "# Potencia \n",
+    "potencia = math.pow(3,7)\n",
+    "print(potencia)\n",
+    "\n",
+    "# Logaritmo Natural\n",
+    "\n",
+    "logaritmo_naatural = math.log(10)\n",
+    "print(logaritmo_naatural)\n",
+    "\n",
+    "# Seno \n",
+    "seno = math.sin(math.pi/2)\n",
+    "print(seno)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Numeros complejos "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3+4j)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z1 = 2 + 1j\n",
+    "\n",
+    "z2 = 1 + 3j\n",
+    "\n",
+    "suma = z1 + z2\n",
+    "suma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Debuelve la parte real \n",
+    "\n",
+    "z1.real"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Debuelve la parte imaginaria \n",
+    "\n",
+    "z2.imag"
+   ]
   }
  ],
  "metadata": {
