Listas_tuplas terminado

--- a/Modulo_1/8.Listas_tuplas.ipynb
+++ b/Modulo_1/8.Listas_tuplas.ipynb
@@ -373,11 +373,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n",
+      "[0, 1, 2, 3, 4, 6, 7, 8, 9, 10, 11]\n",
+      "[0, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
-    "lista = [1,2,3,4,5,6,7,8,9,10]\n"
+    "lista = [1,2,3,4,5,6,7,8,9,10]\n",
+    "lista.append(11)\n",
+    "print(lista)\n",
+    "lista.insert(0,0)\n",
+    "print(lista)\n",
+    "lista.remove(5)\n",
+    "print(lista)\n",
+    "sublista = lista[0:5]\n",
+    "print(sublista)"
    ]
   },
   {
@@ -424,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,23 +451,37 @@
     "tupla_vacia = ()\n",
     "\n",
     "# Crear una tupla con elementos\n",
+    "tupla = (1, 2, 3, 4, 5)\n",
     "\n",
-    "\n",
-    "# Crear una tupla con un solo elemento\n"
+    "# Crear una tupla con un solo elemento\n",
+    "tupla = (1,)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elemento en el índice 1: 2\n",
+      "Último elemento: 5\n"
+     ]
+    }
+   ],
    "source": [
     "tupla = (1, 2, 3, 4, 5)\n",
     "\n",
     "# Acceder a un elemento por índice\n",
     "\n",
+    "elemento_por_indice = tupla[1]\n",
+    "print(\"Elemento en el índice 1:\", elemento_por_indice)\n",
     "\n",
-    "# Acceder al último elemento\n"
+    "# Acceder al último elemento\n",
+    "ultimo_elemento = tupla[-1]\n",
+    "print(\"Último elemento:\", ultimo_elemento)\n"
    ]
   },
   {
@@ -500,21 +533,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dias_semana = ('lunes','martes','miercoles','juevez','viernes','sabado','domingo')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 2\n",
+    "tercer_dia = dias_semana[2]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#3\n",
+    "primeros_tres_dias = dias_semana[:3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -540,18 +581,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Después de agregar una tarea: ['Comprar leche', 'Llamar al doctor', 'Enviar correo', 'Limpiar la casa']\n",
+      "\n",
+      "Después de eliminar una tarea completada: ['Comprar leche', 'Llamar al doctor', 'Limpiar la casa']\n",
+      "\n",
+      "Después de modificar una tarea: ['Comprar leche', 'Llamar al dentista', 'Limpiar la casa']\n"
+     ]
+    }
+   ],
    "source": [
     "# Crear una lista de tareas\n",
     "tareas = [\"Comprar leche\", \"Llamar al doctor\", \"Enviar correo\"]\n",
     "\n",
     "# Agregar una nueva tarea\n",
-    "\n",
+    "nueva_tarea = \"Limpiar la casa\"\n",
+    "tareas.append(nueva_tarea)\n",
+    "print(tareas)\n",
     "# Eliminar una tarea que ya se completó\n",
-    "\n",
-    "# Modificar una tarea\n"
+    "tarea_completada = \"Enviar correo\"\n",
+    "tareas.remove(tarea_completada)\n",
+    "print(tareas)\n",
+    "# Modificar una tarea\n",
+    "indice_tarea = tareas.index(\"Llamar al doctor\")\n",
+    "tareas[indice_tarea] = \"Llamar al dentista\"\n",
+    "print(tareas)"
    ]
   },
   {
@@ -590,10 +651,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cordenadas = [40.712776, -74.005974]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[30, -74.005974]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cordenadas[0] = 30\n",
+    "cordenadas\n"
+   ]
   }
  ],
  "metadata": {
