Listas primer ejercicio

--- a/Modulo_1/9.Diccionarios.ipynb
+++ b/Modulo_1/9.Diccionarios.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,24 +47,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diccionario = {\n",
+    "    \"Nombre\":'Juan',\n",
+    "    \"edad\" : 30,\n",
+    "    \"Ciudad\" : 'Mexico'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Nombre': 'Juan', 'edad': 30, 'Ciudad': 'Mexico'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diccionario"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2015: 2135000, 2016: 2154900, 2017: 2177000, 2018: 2203000, 2019: 2250000}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poblacion = {\n",
+    "    2015 : 2_135_000,\n",
+    "    2016 : 2_154_900,\n",
+    "    2017 : 2_177_000,\n",
+    "    2018 : 2_203_000,\n",
+    "    2019 : 2_250_000,\n",
+    "}\n",
+    "poblacion"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Nombre': 'Juan',\n",
+       " 'edad': 30,\n",
+       " 'Ciudad': 'Mexico',\n",
+       " 'hijos': ['paco', 'pablo'],\n",
+       " 'edad_hijos': {'paco': 10, 'pablo': 12}}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diccionario = {\n",
+    "    \"Nombre\":'Juan',\n",
+    "    \"edad\" : 30,\n",
+    "    \"Ciudad\" : 'Mexico',\n",
+    "    \"hijos\" : ['paco','pablo'],\n",
+    "    \"edad_hijos\" :{\"paco\":10, \"pablo\":12}\n",
+    "}\n",
+    "diccionario"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,10 +145,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nombre = diccionario[\"edad_hijos\"][\"pablo\"]\n",
+    "nombre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edad = diccionario.get(\"edad\")\n",
+    "edad"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,15 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Agregar un nuevo par clave-valor\n",
+    "diccionario[\"Profesion\"] = 'ingeniero'\n",
+    "diccionario\n",
     "\n",
-    "\n",
-    "\n",
-    "# Modificar un valor existente\n"
+    "# Modificar un valor existente\n",
+    "diccionario[\"Profesion\"] = 'lecenciado'"
    ]
   },
   {
@@ -112,17 +218,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nombre': 'Juan', 'edad': 30, 'hijos': ['paco', 'pablo'], 'edad_hijos': {'paco': 10, 'pablo': 12}, 'Profesion': 'lecenciado'}\n",
+      "{'Nombre': 'Juan', 'edad': 30, 'hijos': ['paco', 'pablo'], 'edad_hijos': {'paco': 10, 'pablo': 12}}\n"
+     ]
+    }
+   ],
    "source": [
     "# Eliminar un par clave-valor\n",
-    "\n",
+    "del diccionario[\"Ciudad\"]\n",
     "print(diccionario)\n",
     "\n",
     "# Eliminar y devolver un valor\n",
-    "\n",
-    "print(profesion)  \n",
+    "Profesion = diccionario.pop('Profesion')\n",
+    "#print(profesion)  \n",
     "print(diccionario)"
    ]
   },
@@ -139,20 +254,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Nombre', 'edad', 'hijos', 'edad_hijos'])\n",
+      "dict_values(['Juan', 30, ['paco', 'pablo'], {'paco': 10, 'pablo': 12}])\n",
+      "dict_items([('Nombre', 'Juan'), ('edad', 30), ('hijos', ['paco', 'pablo']), ('edad_hijos', {'paco': 10, 'pablo': 12})])\n"
+     ]
+    }
+   ],
    "source": [
     "# Obtener todas las claves\n",
-    "\n",
+    "claves = diccionario.keys()\n",
     "print(claves)\n",
     "\n",
     "# Obtener todos los valores\n",
-    "\n",
+    "valores = diccionario.values()\n",
     "print(valores)\n",
     "\n",
     "# Obtener todos los pares clave-valor\n",
-    "\n",
+    "items = diccionario.items()\n",
     "print(items)"
    ]
   },
@@ -165,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,25 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'bifronte': 'De dos frentes o dos caras',\n",
-       " 'enjuiciar': 'Instruir, juzgar o sentenciar una causa',\n",
-       " 'anarcoide': 'Que tiende al desorden',\n",
-       " 'montuvio': 'Campesino de la costa'}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rae1 | rae2"
+    "new_diccionario = rae1 | rae2"
    ]
   },
   {
@@ -257,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,17 +377,32 @@
     "    'anarcoide': 'Que tiende al desorden',\n",
     "    'montuvio': 'Campesino de la costa'\n",
     "}\n",
-    "copy_rae = original_rae\n",
+    "copy_rae = original_rae.copy()\n",
     "\n",
     "original_rae['bifronte'] = 'bla bla bla'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bifronte': 'bla bla bla',\n",
+       " 'anarcoide': 'Que tiende al desorden',\n",
+       " 'montuvio': 'Campesino de la costa'}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original_rae"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -297,31 +423,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'título': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'año_de_publicación': 1967}\n"
+     ]
+    }
+   ],
+   "source": [
+    "libro = {\n",
+    "    \"título\": \"El fin de la infancia\",\n",
+    "    \"autor\": \"Arthur C. Clarke\",\n",
+    "    \"año_de_publicación\": 1953\n",
+    "}\n",
+    "print(libro)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'título': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'año_de_publicación': 1970, 'género': 'Ciencia ficccion'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "libro[\"género\"] = \"Ciencia ficccion\"\n",
+    "print(libro)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'título': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'año_de_publicación': 1970, 'género': 'Ciencia ficccion'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "libro[\"año_de_publicación\"] = 1970\n",
+    "print(libro)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'título': 'Cien años de soledad', 'autor': 'Gabriel García Márquez', 'año_de_publicación': 1970}\n"
+     ]
+    }
+   ],
+   "source": [
+    "del libro[\"género\"]\n",
+    "print(libro)"
+   ]
   },
   {
    "cell_type": "markdown",
