Ejercicio logica de programacion, reto 10.3

--- a/Modulo_1/11.Modularidad.ipynb
+++ b/Modulo_1/11.Modularidad.ipynb
@@ -21,6 +21,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sumar(valor1,valor2):\n",
+    "    #codigo a ejecutar\n",
+    "    resultado = valor1 + valor2\n",
+    "    return resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def saludo(): \n",
+    "    print('hola')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# llamar una funcion\n",
+    "saludo()\n",
+    "\n",
+    "sumar(5,9)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -35,6 +87,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one():\n",
+    "    return 1 # retornar un valor\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,10 +104,95 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uno = one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(uno)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Retornar multiples valores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def return_multiples():\n",
+    "    return 0, 1, \"...\", \"n\" # retorna una tupla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1, 2, 3, '...', 'n')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "return_multiples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a,b,c,d = return_multiples()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'...'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
    ]
   },
   {
@@ -60,6 +207,102 @@
    "metadata": {},
    "source": [
     "Los parámetros nos permiten variar los datos que consume una función para obtener distintos resultados. Vamos a empezar a crear funciones que reciben parámetros."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sqrt(x):\n",
+    "    raiz = x ** (1/2)\n",
+    "    print(f'valor raiz: {raiz}')\n",
+    "    return raiz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "valor raiz: 2.23606797749979\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2.23606797749979"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sqrt(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "fucio para calcular el area y perimetro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fucio para calcular el area y perimetro\n",
+    "\n",
+    "def cal_Are_Per(largo,ancho):\n",
+    "    area = largo * ancho\n",
+    "    perimetro = 2 * (largo + ancho)\n",
+    "    return area, perimetro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el area del rectagulo es: 1541 cm2 y el perimetro es: 180 cm\n"
+     ]
+    }
+   ],
+   "source": [
+    "area,perimetro = cal_Are_Per(23,67)\n",
+    "print(f'el area del rectagulo es: {area} cm2 y el perimetro es: {perimetro} cm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el area del rectagulo es: 900 cm2 y el perimetro es: 130 cm\n"
+     ]
+    }
+   ],
+   "source": [
+    "area, perimetro = cal_Are_Per(45,20)\n",
+    "print(f'el area del rectagulo es: {area} cm2 y el perimetro es: {perimetro} cm')"
    ]
   },
   {
@@ -95,10 +338,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def polinomio_cuadratico(a,b,c):\n",
+    "\n",
+    "    discriminate = b**2 - 4*a*c\n",
+    "\n",
+    "\n",
+    "    raiz_1= (-(b)+(((b)**2)-(4*a*c)))/(2*a)\n",
+    "    raiz_2= (-(b)-(((b)**2)-(4*a*c)))/(2*a)\n",
+    "\n",
+    "    return raiz_1,raiz_2\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "raiz 1 (+): -0.5, raiz 2 (-): 3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "raiz_1, raiz_2 = polinomio_cuadratico(2,-5,4)\n",
+    "\n",
+    "print(f'raiz 1 (+): {raiz_1}, raiz 2 (-): {raiz_2}')"
+   ]
   },
   {
    "cell_type": "markdown",
