Ejercicio logica de programacion, reto 10.3

--- a/Modulo_1/11.Modularidad.ipynb
+++ b/Modulo_1/11.Modularidad.ipynb
@@ -344,8 +344,8 @@
    "source": [
     "def polinomio_cuadratico(a,b,c):\n",
     "\n",
-    "    raiz_1= (-(b)+(((b)**2)-(4*a*c)))/(2*a)\n",
-    "    raiz_2= (-(b)-(((b)**2)-(4*a*c)))/(2*a)\n",
+    "    raiz_1= (-(b)+(((b)**2)-(4*a*c))**(1/2))/(2*a)\n",
+    "    raiz_2= (-(b)-(((b)**2)-(4*a*c))**(1/2))/(2*a)\n",
     "\n",
     "    return raiz_1,raiz_2\n",
     "    "
