--- a/Modulo_1/11.Modularidad.ipynb
+++ b/Modulo_1/11.Modularidad.ipynb
@@ -342,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def polinomio_cuadratico(a,b,c):\n",
+    "def resolver_polinomio_cuadratico(a,b,c):\n",
     "\n",
     "    raiz_1= (-(b)+(((b)**2)-(4*a*c))**(1/2))/(2*a)\n",
     "    raiz_2= (-(b)-(((b)**2)-(4*a*c))**(1/2))/(2*a)\n",
@@ -366,9 +366,42 @@
    ],
    "source": [
     "\n",
-    "raiz_1, raiz_2 = polinomio_cuadratico(2,-5,4)\n",
+    "raiz_1, raiz_2 = resolver_polinomio_cuadratico(2,-5,4)\n",
     "\n",
     "print(f'raiz 1 (+): {raiz_1}, raiz 2 (-): {raiz_2}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _min(a,b):\n",
+    "    if a < b:\n",
+    "        return a\n",
+    "    else:\n",
+    "        return b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_min(7,9)"
    ]
   },
   {
@@ -389,10 +422,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def square_it(values):\n",
+    "    for i in range(len(values)):\n",
+    "        values[i] **= 2\n",
+    "\n",
+    "    return values\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 9, 16]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valores = [2,3,4]\n",
+    "\n",
+    "square_it(valores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 9, 16]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valores"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -403,10 +485,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lista = [1,2,3,4,5,6]\n",
+    "\n",
+    "def añadirElemento(lista_m, datos):\n",
+    "    lista_2 = lista_m.copy()\n",
+    "    #multiples calculos\n",
+    "    lista_2.append(datos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "añadirElemento(lista,[34,67,55])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -437,6 +555,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def polinomio_cuadratico(a,b = 3,c = 2):\n",
+    "\n",
+    "    raiz_1= (-(b)+(((b)**2)-(4*a*c))**(1/2))/(2*a)\n",
+    "    raiz_2= (-(b)-(((b)**2)-(4*a*c))**(1/2))/(2*a)\n",
+    "\n",
+    "    return raiz_1,raiz_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-1.0, -2.0)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "polinomio_cuadratico(1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -451,10 +603,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fucion_con_argumentos(*args):\n",
+    "    print(args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 'a', 3.3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "fucion_con_argumentos(1,2,'a',3.3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -464,6 +636,13 @@
     "\n",
     "`*args` es útil cuando no sabes de antemano cuántos argumentos necesitará tu función. Esto es especialmente útil en casos donde quieres que tu función sea flexible y pueda manejar diferentes números de entradas."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -476,10 +655,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sumar_todos(*args):\n",
+    "    total = 0\n",
+    "    for i in args:\n",
+    "        total += i\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sumar_todos(1,3,7,2,8)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -496,10 +701,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fucion_con_kwargs(**kwargs):\n",
+    "    print(kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nombre': 'juan', 'edad': 25}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fucion_con_kwargs(nombre = 'juan', edad = 25)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -512,10 +737,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def describir_persona(**kwargs):\n",
+    "    print(kwargs['nombre'])\n",
+    "    for key, value in kwargs.items():\n",
+    "            print(f'{key}: {value}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['luis', 'jose']\n",
+      "nombre: ['luis', 'jose']\n",
+      "edad: [30, 25]\n",
+      "ocupacion: ['ingeniero', 'maestro']\n"
+     ]
+    }
+   ],
+   "source": [
+    "describir_persona(nombre = ['luis','jose'], edad = [30,25], ocupacion = ['ingeniero','maestro'])"
+   ]
   },
   {
    "attachments": {
@@ -538,10 +788,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "\n",
+    "def calcular_volumen(tipo_figura, **kwargs):\n",
+    "    if tipo_figura == 'cubo':\n",
+    "        lado = kwargs['lado']\n",
+    "        volumen = lado**3\n",
+    "        return volumen\n",
+    "    \n",
+    "    elif tipo_figura == 'prisma':\n",
+    "        base = kwargs['base']\n",
+    "        altura = kwargs['altura']\n",
+    "        volumen = base * altura \n",
+    "        return volumen\n",
+    "    \n",
+    "    elif tipo_figura == 'piramide':\n",
+    "        base = kwargs['base']\n",
+    "        altura = kwargs['altura']\n",
+    "        volumen = (1/3) * base * altura\n",
+    "        return volumen\n",
+    "    \n",
+    "    elif tipo_figura == 'cilindro':\n",
+    "        radio = kwargs['radio']\n",
+    "        altura = kwargs['altura']\n",
+    "        volumen = math.pi * radio**2 * altura\n",
+    "        return volumen\n",
+    "    \n",
+    "    elif tipo_figura == 'cono':\n",
+    "        radio = kwargs['radio']\n",
+    "        altura = kwargs['altura']\n",
+    "        volumen = (1/3) * math.pi * radio**2 * altura\n",
+    "        return volumen    \n",
+    "    elif tipo_figura == 'esfera':\n",
+    "        radio = kwargs['radio']\n",
+    "        volumen = (4/3) * math.pi * radio**3\n",
+    "        return volumen\n",
+    "    \n",
+    "    else:\n",
+    "        return \"Tipo de figura no reconocido\"\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "250 cm3\n",
+      "125 cm3\n",
+      "16.666666666666664 cm3\n",
+      "402.1238596594935 cm3\n",
+      "209.43951023931953 cm3\n",
+      "4188.790204786391 cm3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# figuras = cubo, prisma, piramiede, cilindro, cono, esfera\n",
+    "\n",
+    "prisma = calcular_volumen(tipo_figura = 'prisma', base = 25, altura = 10)\n",
+    "print(f'{prisma} cm3')\n",
+    "cubo  = calcular_volumen(tipo_figura= 'cubo', lado = 5)\n",
+    "print(f'{cubo} cm3')\n",
+    "piramide = calcular_volumen(tipo_figura= 'piramide', base = 10, altura = 5)\n",
+    "print(f'{piramide} cm3')\n",
+    "cilindro = calcular_volumen(tipo_figura= 'cilindro', radio = 4, altura = 8)\n",
+    "print(f'{cilindro} cm3')\n",
+    "cono = calcular_volumen(tipo_figura='cono', radio = 5, altura = 8)\n",
+    "print(f'{cono} cm3')\n",
+    "esfera = calcular_volumen(tipo_figura='esfera', radio = 10)\n",
+    "print(f'{esfera} cm3')"
+   ]
   },
   {
    "cell_type": "markdown",
