Ejercicio 11.0.1 funcion figuras

--- a/Modulo_1/11.Modularidad.ipynb
+++ b/Modulo_1/11.Modularidad.ipynb
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,35 +796,35 @@
     "\n",
     "def calcular_volumen(tipo_figura, **kwargs):\n",
     "    if tipo_figura == 'cubo':\n",
-    "        lado = kwargs['lado']\n",
+    "        lado = kwargs.get('lado')\n",
     "        volumen = lado**3\n",
     "        return volumen\n",
     "    \n",
     "    elif tipo_figura == 'prisma':\n",
-    "        base = kwargs['base']\n",
-    "        altura = kwargs['altura']\n",
+    "        base = kwargs.get('lado1') * kwargs.get('lado2')\n",
+    "        altura = kwargs.get('altura')\n",
     "        volumen = base * altura \n",
     "        return volumen\n",
     "    \n",
     "    elif tipo_figura == 'piramide':\n",
-    "        base = kwargs['base']\n",
-    "        altura = kwargs['altura']\n",
+    "        base = kwargs.get('base')\n",
+    "        altura = kwargs.get('altura')\n",
     "        volumen = (1/3) * base * altura\n",
     "        return volumen\n",
     "    \n",
     "    elif tipo_figura == 'cilindro':\n",
-    "        radio = kwargs['radio']\n",
-    "        altura = kwargs['altura']\n",
+    "        radio = kwargs.get('radio')\n",
+    "        altura = kwargs.get('altura')\n",
     "        volumen = math.pi * radio**2 * altura\n",
     "        return volumen\n",
     "    \n",
     "    elif tipo_figura == 'cono':\n",
-    "        radio = kwargs['radio']\n",
-    "        altura = kwargs['altura']\n",
+    "        radio = kwargs.get('radio')\n",
+    "        altura = kwargs.get('altura')\n",
     "        volumen = (1/3) * math.pi * radio**2 * altura\n",
     "        return volumen    \n",
     "    elif tipo_figura == 'esfera':\n",
-    "        radio = kwargs['radio']\n",
+    "        radio = kwargs.get('radio')\n",
     "        volumen = (4/3) * math.pi * radio**3\n",
     "        return volumen\n",
     "    \n",
@@ -836,14 +836,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "250 cm3\n",
+      "400 cm3\n",
       "125 cm3\n",
       "16.666666666666664 cm3\n",
       "402.1238596594935 cm3\n",
@@ -856,17 +856,17 @@
     "\n",
     "# figuras = cubo, prisma, piramiede, cilindro, cono, esfera\n",
     "\n",
-    "prisma = calcular_volumen(tipo_figura = 'prisma', base = 25, altura = 10)\n",
+    "prisma = calcular_volumen('prisma', lado1 = 5, lado2 = 8, altura = 10)\n",
     "print(f'{prisma} cm3')\n",
-    "cubo  = calcular_volumen(tipo_figura= 'cubo', lado = 5)\n",
+    "cubo  = calcular_volumen('cubo', lado = 5)\n",
     "print(f'{cubo} cm3')\n",
-    "piramide = calcular_volumen(tipo_figura= 'piramide', base = 10, altura = 5)\n",
+    "piramide = calcular_volumen('piramide', base = 10, altura = 5)\n",
     "print(f'{piramide} cm3')\n",
-    "cilindro = calcular_volumen(tipo_figura= 'cilindro', radio = 4, altura = 8)\n",
+    "cilindro = calcular_volumen('cilindro', radio = 4, altura = 8)\n",
     "print(f'{cilindro} cm3')\n",
-    "cono = calcular_volumen(tipo_figura='cono', radio = 5, altura = 8)\n",
+    "cono = calcular_volumen('cono', radio = 5, altura = 8)\n",
     "print(f'{cono} cm3')\n",
-    "esfera = calcular_volumen(tipo_figura='esfera', radio = 10)\n",
+    "esfera = calcular_volumen('esfera', radio = 10)\n",
     "print(f'{esfera} cm3')"
    ]
   },
