Actualizacion de datos

--- a/Modulo_1/10.3.Reto_de_progr.ipynb
+++ b/Modulo_1/10.3.Reto_de_progr.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,9 @@
     "\n",
     "print(\"Array original:\", arr)\n",
     "\n",
-    "for i in range(len(arr)):\n",
+    "n=len(arr)\n",
+    "\n",
+    "for i in range(n-1):\n",
     "    inter = False\n",
     "    for j in range(0, n-i-1):\n",
     "        if arr[j] > arr[j+1]:\n",
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -195,73 +197,73 @@
      "text": [
       "\n",
       "Palabras ordenadas por longitud:\n",
-      "y: 1\n",
-      "es: 2\n",
-      "ni: 2\n",
-      "en: 2\n",
-      "se: 2\n",
-      "no: 2\n",
-      "el: 2\n",
-      "un: 2\n",
-      "la: 2\n",
-      "ha: 2\n",
-      "de: 2\n",
-      "sin: 3\n",
-      "aún: 3\n",
-      "los: 3\n",
-      "que: 3\n",
       "eco: 3\n",
-      "del: 3\n",
-      "una: 3\n",
-      "las: 3\n",
-      "rey: 3\n",
-      "mora: 4\n",
-      "fiel: 4\n",
-      "sólo: 4\n",
-      "alma: 4\n",
-      "amor: 4\n",
-      "vida: 4\n",
-      "allí: 4\n",
-      "brisa: 5\n",
-      "besos: 5\n",
-      "donde: 5\n",
-      "cruel: 5\n",
-      "nunca: 5\n",
-      "leves: 5\n",
-      "final: 5\n",
-      "calma: 5\n",
-      "cielo: 5\n",
-      "podido: 6\n",
-      "existe: 6\n",
-      "eterna: 6\n",
-      "viejas: 6\n",
-      "rincón: 6\n",
-      "tiempo: 6\n",
-      "dulces: 6\n",
-      "entera: 6\n",
-      "sueños: 6\n",
-      "borrar: 6\n",
-      "pasión: 6\n",
-      "resuena: 7\n",
-      "guardan: 7\n",
-      "promesa: 7\n",
-      "sincera: 7\n",
-      "corazón: 7\n",
-      "susurro: 7\n",
-      "suspiros: 8\n",
-      "tristeza: 8\n",
-      "embriaga: 8\n",
-      "secretos: 8\n",
-      "lágrimas: 8\n",
-      "silencio: 8\n",
-      "melodías: 8\n",
-      "susurran: 8\n",
       "florecen: 8\n",
-      "estrellas: 9\n",
+      "ni: 2\n",
+      "calma: 5\n",
+      "eterna: 6\n",
+      "besos: 5\n",
+      "sueños: 6\n",
       "desengaño: 9\n",
+      "vida: 4\n",
+      "una: 3\n",
+      "final: 5\n",
+      "marchitan: 9\n",
+      "lágrimas: 8\n",
+      "allí: 4\n",
+      "sin: 3\n",
+      "que: 3\n",
+      "de: 2\n",
+      "susurro: 7\n",
+      "promesa: 7\n",
+      "es: 2\n",
+      "mora: 4\n",
+      "en: 2\n",
+      "viejas: 6\n",
+      "un: 2\n",
+      "resuena: 7\n",
+      "embriaga: 8\n",
+      "existe: 6\n",
+      "secretos: 8\n",
+      "corazón: 7\n",
+      "los: 3\n",
+      "alma: 4\n",
+      "dulces: 6\n",
+      "las: 3\n",
+      "la: 2\n",
+      "amor: 4\n",
+      "rey: 3\n",
+      "fiel: 4\n",
+      "rincón: 6\n",
+      "ha: 2\n",
+      "sólo: 4\n",
+      "tiempo: 6\n",
+      "donde: 5\n",
+      "leves: 5\n",
+      "cielo: 5\n",
+      "entera: 6\n",
+      "tristeza: 8\n",
+      "se: 2\n",
+      "borrar: 6\n",
+      "silencio: 8\n",
+      "suspiros: 8\n",
+      "pasión: 6\n",
+      "del: 3\n",
+      "sincera: 7\n",
+      "no: 2\n",
+      "guardan: 7\n",
+      "aún: 3\n",
+      "estrellas: 9\n",
+      "melodías: 8\n",
+      "el: 2\n",
       "fantasías: 9\n",
+      "cruel: 5\n",
       "constante: 9\n",
-      "marchitan: 9\n"
+      "nunca: 5\n",
+      "susurran: 8\n",
+      "y: 1\n",
+      "brisa: 5\n",
+      "podido: 6\n"
      ]
     }
    ],
